<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/broadcastSelectionFragment"
            android:icon="@drawable/ic_menu_broadcast"
            android:title="@string/menu_broadcast_receiver" />
        <item
            android:id="@+id/imageScaleFragment"
            android:icon="@drawable/ic_menu_image"
            android:title="@string/menu_image_scale" />
        <item
            android:id="@+id/videoFragment"
            android:icon="@drawable/ic_menu_video"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/audioFragment"
            android:icon="@drawable/ic_menu_audio"
            android:title="@string/menu_audio" />
    </group>
</menu>
